# confy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dev.cmake  notes.md
code/: CMakeLists.txt  confy.cpp
code/confy/: api.h  audit_log.hpp  basic_value.cpp  basic_value.hpp  basic_value_dsl.hpp  cli.cpp  cli.hpp  config.cpp  config.hpp  config_error.hpp  config_event.hpp  config_exception.hpp  configurator.cpp  configurator.hpp  confy.hpp  dict.hpp  dict_fwd.hpp  env.hpp  env_var_strategy.hpp  exception.cpp  exception.hpp  generic_value.hpp  node.cpp  node.hpp  node_container.hpp  node_desc.hpp  node_dsl.hpp  node_visitor.cpp  node_visitor.hpp  option.cpp  option.hpp  option_for_type.hpp  option_set_value_result.hpp  path_delim.hpp  ref_value_for.hpp  schema_dsl.cpp  schema_dsl.hpp  section.cpp  section.hpp  set_value_result.hpp  (+5 more)
code/confy/bits/: cli_util.cpp  cli_util.hpp  laurel.inl  throw_ex.hpp  value_ex.hpp
code/confy/impl/: api.h  cmd_line_util.inl  config_item.hpp  laurel.inl  magic_enum.hpp  num_from_string.hpp
code/confy/types/: auto_enum.hpp  basic_option.hpp  boolean.hpp  command.cpp  command.hpp  function.hpp  generic_option.hpp  ini_file.cpp  ini_file.hpp  integer.hpp  number.hpp  real.hpp  simple_enum.hpp  string.hpp
code/confy/v/: auto_enum.hpp  boolean.hpp  common_ref_value.hpp  common_value.hpp  common_value_type_traits.hpp  integer.hpp  simple_value.hpp  std_optional.hpp  std_string.hpp  validator.hpp
code/include/confy/: config.hpp  config_builder.hpp  confy.hpp
code/include/confy/impl/: has_key.hpp
example/: CMakeLists.txt  e-basic.cpp
old/code/: CMakeLists.txt
old/code/confy/: config.cpp  config.hpp  config_event.hpp  config_exception.hpp  confy.hpp  exception.cpp  exception.hpp  option.cpp  option.hpp  option_set_value_result.hpp  schema_dsl.cpp  schema_dsl.hpp  section.hpp  types.hpp  value_source.hpp
old/code/confy/impl/: api.h  cmd_line_util.inl  config_item.hpp  laurel.inl  num_from_string.hpp
old/code/confy/types/: auto_enum.hpp  basic_option.hpp  boolean.hpp  command.cpp  command.hpp  generic_option.hpp  ini_file.hpp  integer.hpp  number.hpp  real.hpp  simple_enum.hpp  string.hpp
old/example/: CMakeLists.txt  e-basic.cpp
old/test/: CMakeLists.txt  setenv.inl  t-auto_enum.cpp  t-cmd_line_util.cpp  t-confy.cpp  t-laurel.cpp  t-num_from_string.cpp  t-setenv.cpp  t-simple_enum.cpp  t-types.cpp  t-types.hpp
sandbox/: CMakeLists.txt  sandbox.cpp
scratch/: CMakeLists.txt  scratch.cpp
test/: CMakeLists.txt  setenv.inl  t-auto_enum.cpp  t-cli.cpp  t-cli_util.cpp  t-cmd_line_util.cpp  t-common_value.cpp  t-common_value_types.cpp  t-configurator.cpp  t-confy.cpp  t-laurel.cpp  t-node_tree.cpp  t-num_from_string.cpp  t-ref_value_types.cpp  t-section.cpp  t-setenv.cpp  t-simple_enum.cpp  t-simple_value.cpp  t-std_optional.cpp  t-types.cpp  t-types.hpp  t-value.cpp
